force-app/main/default/objects/Material_Items__c/Material_Items__c.object-meta.xml
<CustomObject>
    <description>Vertiba 5/22/14 - Detail object for Contacts to track Sunshine Act compliance report expenses as well as expenses for non-MDs from individual sales calls and group events. Data is used to populate quarterly Sunshine Act Compliance Report for contacts with prof. designation regulated by Sunshine Act.</description>
    <label>Material Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Material Items #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>