force-app/main/default/objects/Material_Items__c/fields/Active_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Active_Products</valueSetName>
    </valueSet>
</CustomField>