force-app/main/default/objects/Material_Items__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Vertiba 5/22/14 - used for Sunshine Act compliance reporting</description>
    <inlineHelpText>The system will automatically look up the value for marketing materials. For a Meal, please enter the dollar value.</inlineHelpText>
    <label>Item Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>