force-app/main/default/objects/Material_Items__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Vertiba 5/22/14 - creates detail relationship to Contacts to track Sunshine Act compliance report expenses as well as expenses for non-MDs from individual sales calls and group events. Data is used to populate quarterly Sunshine Act Compliance Report for contacts with prof. designation regulated by Sunshine Act</description>
    <inlineHelpText>Contact which has received material items</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Material Items</relationshipLabel>
    <relationshipName>Material_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>