force-app/main/default/objects/Material_Items__c/fields/Date_Provided__c.field-meta.xml
<CustomField>
    <fullName>Date_Provided__c</fullName>
    <description>Vertiba 5/22/14 - Data is used to populate quarterly Sunshine Act Compliance Report for contacts with prof. designation regulated by Sunshine Act</description>
    <inlineHelpText>Enter the date the item was provided to this contact</inlineHelpText>
    <label>Date Provided</label>
    <type>Date</type>
</CustomField>