force-app/main/default/objects/Material_Items__c/fields/Group_Event__c.field-meta.xml
<CustomField>
    <fullName>Group_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vertiba 5/27/14 - allows associating a material item with a specific campaign</description>
    <inlineHelpText>If appropriate, select the Group Event where this item was provided to the Contact</inlineHelpText>
    <label>Group Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Material Items</relationshipLabel>
    <relationshipName>Material_Items</relationshipName>
    <type>Lookup</type>
</CustomField>