force-app/main/default/objects/Material_Items__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ONC_Marketing_Material__c</referenceTo>
    <relationshipLabel>Material Items</relationshipLabel>
    <relationshipName>Material_Items</relationshipName>
    <type>Lookup</type>
</CustomField>