force-app/main/default/objects/Material_Items__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <formula>Item__r.Item_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Description</label>
    <type>Text</type>
</CustomField>