force-app/main/default/objects/Material_Items__c/fields/Old_Material_Items__c.field-meta.xml
<CustomField>
    <fullName>Old_Material_Items__c</fullName>
    <label>Old Material Items</label>
    <length>18</length>
    <type>Text</type>
</CustomField>