force-app/main/default/objects/Material_Items__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Vertiba 5/22/14 - Data is used to populate quarterly Sunshine Act Compliance Report for contacts with prof. designation regulated by Sunshine Act</description>
    <inlineHelpText>Vertiba 5/22/14 - Data is used to populate quarterly Sunshine Act Compliance Report for contacts with prof. designation regulated by Sunshine Act</inlineHelpText>
    <label>Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>