force-app/main/default/objects/Material_Items__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Vertiba 5/22/14 - used for Sunshine Act compliance reporting</description>
    <inlineHelpText>Select this item's source expense type</inlineHelpText>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Educational item</fullName>
            </value>
            <value>
                <fullName>Meal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>