force-app/main/default/objects/Material_Items__c/fields/Task_Id_Ref__c.field-meta.xml
<CustomField>
    <fullName>Task_Id_Ref__c</fullName>
    <label>Task_Id_Ref</label>
    <length>18</length>
    <type>Text</type>
</CustomField>