force-app/main/default/objects/Material_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active_Product__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_Provided__c</columns>
    <columns>Item__c</columns>
    <columns>Amount__c</columns>
    <columns>Item_Description__c</columns>
    <columns>Quantity__c</columns>
    <columns>Source_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>